fixed jwt register problem and add role based access  and fixed song update problem(partial update ) improving performance by removing repeated code also.